revision 10 - 20100524:                                             |
    * Fixed a nasty bug causing massive memory leak and network     |
      usage after the completion of a download speed test           |
    * Build instructions included in the README                     |
    * Split old console in two: "Log messages" and "Test results"   |
    * Checkbox to enable/disable download speed test                |


revision 9 - 20100512:                                              |
    * Source code is now compilable on 64bit Linux hosts            |


revision 8 - 20100512:                                              |
    * Print more detailed OS info for Linux/Unix hosts              |
    * Updated embedded target list                                  |
    * Changed .ini filename to lowercase. IMPORTANT: as a result,   |
      target list updates are now broken for all older revisions    |
    * Removed vBulletin URL tags surrounding host names to stop     |
      Thunderbird scam warnings when receiving notification emails  |
      from the vBulletin forum where a report was posted            |


revision 7 - 20100511:                                              |
    * Added download speed test with 6 concurrent downloads         |


revision 6 - 20100511:                                              |
    * Fixed About box "too small dimensions" bug                    |
    * Instead of adjusting the number of worker threads based on    |
      the number of CPU cores, it is now manually selectable by the |
      user, with 8 being the maximum value                          |


revision 2 - 20100505:                                              |
    * "Discuss" URL now points to QSpeedTest's official phpBB forum |
    * "About" box contains link to forum                            |
    * Target list updates are hosted on SourceForge                 |
    * Version/revision number is displayed in GUI and reports       |