@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>720</width>
+    <width>700</width>
     <height>450</height>
    </rect>
   </property>
@@ -119,6 +119,9 @@
       <property name="undoRedoEnabled">
        <bool>false</bool>
       </property>
+      <property name="lineWrapMode">
+       <enum>QPlainTextEdit::NoWrap</enum>
+      </property>
       <property name="readOnly">
        <bool>true</bool>
       </property>
@@ -229,6 +232,9 @@
       <property name="undoRedoEnabled">
        <bool>false</bool>
       </property>
+      <property name="lineWrapMode">
+       <enum>QPlainTextEdit::NoWrap</enum>
+      </property>
       <property name="readOnly">
        <bool>true</bool>
       </property>
@@ -288,7 +294,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>720</width>
+     <width>700</width>
      <height>21</height>
     </rect>
    </property>
