@@ -1,7 +1,7 @@
 [TargetListInfo]
-Version=201005121248
+Version=201005250104
 NumberOfGroups=3
-Comment="by Someonefromhell, v0.40"
+Comment="by Someonefromhell, v0.41"
 ContactURL=http://www.adslgr.com/forum/member.php?u=1666
 
 [Group1]
@@ -66,7 +66,7 @@ NumberOfTargets=73
 15\Name=AT&T US
 15\Address=216.77.188.61
 16\Name=Global Crossing US
-16\Address=www.gblx.net
+16\Address=206.165.27.197
 17\Name=Level3 US
 17\Address=www.level3.com
 18\Name=Telia US
@@ -146,7 +146,7 @@ NumberOfTargets=73
 55\Name=Optus Australia
 55\Address=211.29.132.105
 56\Name=NTT Japan
-56\Address=www.ntt.net
+56\Address=129.250.3.210
 57\Name=AboveNet Japan
 57\Address=64.125.0.132
 58\Name=Verizon Chech
@@ -223,3 +223,18 @@ NumberOfTargets=19
 18\Address=www.steampowered.com
 19\Name=Gameservers US
 19\Address=www.gameservers.com
+
+[DownloadSpeedTest]
+NumberOfTargets=6
+1\Name=NTUA
+1\URL=http://ftp.ntua.gr/pub/linux/ubuntu-releases/10.04/ubuntu-10.04-desktop-i386.iso
+2\Name=FORTHNET
+2\URL=http://ftp.forthnet.gr/pub/SPEEDTEST/CentOS-5.4-i386-LiveCD.iso
+3\Name=NVIDIA Germany
+3\URL=http://de.download.nvidia.com/Windows/197.45/197.45_desktop_win7_winvista_64bit_international_whql.exe
+4\Name=NVIDIA USA
+4\URL=http://us.download.nvidia.com/Windows/197.45/197.45_desktop_win7_winvista_32bit_english_whql.exe
+5\Name=Microsoft
+5\URL=http://download.microsoft.com/download/E/E/1/EE17FF74-6C45-4575-9CF4-7FC2597ACD18/directx_feb2010_redist.exe
+6\Name=Apple
+6\URL=http://appldnld.apple.com.edgesuite.net/content.info.apple.com/iTunes9/061-8203.20100427.1J2kd/iTunesSetup.exe
