@@ -1,3 +1,12 @@
+revision 11 - 20100525:                                             |
+    * Notification when a new program version is available          |
+    * Temporary workaround for upstream QTBUG-8914: replaced FTP    |
+      download links with HTTP ones                                 |
+    * Print group average packet loss and rank in HTML and vB code  |
+    * Moved hardcoded download speed test targets to qspeedtest.ini |
+    * Updated embedded target list                                  |
+
+
 revision 10 - 20100524:                                             |
     * Fixed a nasty bug causing massive memory leak and network     |
       usage after the completion of a download speed test           |
